--- a/app/src/main/res/layout/activity_detail_info.xml
+++ b/app/src/main/res/layout/activity_detail_info.xml
@@ -10,64 +10,66 @@
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:background="@color/colorPrimaryDark">
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimaryDark"
-            android:fitsSystemWindows="true">
+            app:elevation="0dp">
 
-            <!--app:expandedTitleMarginEnd="10dp"-->
-            <!--app:expandedTitleMarginStart="1dp"-->
             <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:fitsSystemWindows="true"
-                app:contentScrim="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
-                <ImageView
-                    android:id="@+id/img_user_profile"
+                <View
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fitsSystemWindows="true"
-                    android:scaleType="centerCrop"
+                    android:layout_height="@dimen/detail_content_open_view_sum"
                     app:layout_collapseMode="parallax"
-                    tools:ignore="ContentDescription"
-                    tools:src="@drawable/ic_launcher_foreground" />
+                    app:layout_collapseParallaxMultiplier="0.8" />
 
-                <!--<TextView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="?attr/actionBarSize"-->
-                <!--android:gravity="center"-->
-                <!--android:layout_gravity="bottom"-->
-                <!--android:text="Test App"-->
-                <!--android:textColor="@android:color/white"-->
-                <!--android:textSize="36dp"-->
-                <!--app:layout_collapseMode="pin"-->
-                <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->
+                <FrameLayout
+                    android:id="@+id/title_custom"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:background="@color/colorPrimaryDark"
+                    android:orientation="vertical"
+                    app:layout_collapseMode="parallax"
+                    app:layout_collapseParallaxMultiplier="0.1">
+
+                    <TextView
+                        android:id="@+id/txt_user_name_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginBottom="10dp"
+                        android:gravity="bottom|center"
+                        android:textColor="@android:color/white"
+                        android:textSize="30sp"
+                        tools:background="@android:color/holo_blue_light"
+                        tools:text="Петров Семен" />
+
+                </FrameLayout>
 
             </android.support.design.widget.CollapsingToolbarLayout>
 
-            <TextView
-                android:id="@+id/txt_user_name"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_gravity="bottom"
-                android:gravity="center"
-                android:textColor="@android:color/white"
-                android:textSize="36sp"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                tools:text="Test App" />
-
         </android.support.design.widget.AppBarLayout>
+
+        <!-- ===================================== -->
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/detail_content_space_top"
             android:background="@color/colorPrimary"
+            android:scrollbars="none"
+            app:behavior_overlapTop="@dimen/detail_content_space_top"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <LinearLayout
@@ -84,8 +86,7 @@
                     android:text="Статистика пользователя:"
                     android:textColor="@android:color/white"
                     android:textSize="24sp"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                    app:layout_collapseMode="pin" />
 
                 <include layout="@layout/item_divider" />
 
@@ -114,12 +115,52 @@
                     android:text="Расшифровка:"
                     android:textColor="@android:color/white"
                     android:textSize="24sp"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                    app:layout_collapseMode="pin" />
 
             </LinearLayout>
 
         </android.support.v4.widget.NestedScrollView>
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_user_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:elevation="0dp"
+            app:layout_anchor="@+id/title_custom"
+            tools:background="@android:color/holo_green_light">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/toolbar_final_height"
+                android:orientation="horizontal"
+                android:paddingStart="@dimen/custom_toolbar_padding_start"
+                tools:ignore="RtlSymmetry">
+
+                <TextView
+                    android:id="@+id/txt_user_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"
+                    tools:text="Петров Семен" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.Toolbar>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/img_user_profile"
+            android:layout_width="@dimen/image_circle_start_size"
+            android:layout_height="@dimen/image_circle_start_size"
+            android:layout_gravity="center_horizontal"
+            app:civ_border_color="#FFFFFF"
+            app:civ_border_width="2dp"
+            app:finalHeight="@dimen/image_circle_final_size"
+            app:layout_behavior="sbis.helpers.view.behavior.AvatarImageBehavior"
+            tools:src="@drawable/ic_launcher_foreground" />
 
     </android.support.design.widget.CoordinatorLayout>
 
