--- a/app/src/main/res/layout/activity_detail_info.xml
+++ b/app/src/main/res/layout/activity_detail_info.xml
@@ -141,12 +141,26 @@
 
                 </LinearLayout>
 
-                <ProgressBar
-                    android:layout_width="@dimen/progress_bar_size"
-                    android:layout_height="@dimen/progress_bar_size"
-                    android:layout_gravity="center"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:visibility="@{viewModel.state == State.LOADING ? View.VISIBLE : View.GONE}" />
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:visibility="@{viewModel.state == State.LOADING ? View.VISIBLE : View.GONE}">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Подождите, Data Mining - это не быстро..."
+                        android:textSize="18sp" />
+
+                    <ProgressBar
+                        android:layout_width="@dimen/progress_bar_size"
+                        android:layout_height="@dimen/progress_bar_size"
+                        android:layout_gravity="center" />
+
+                </LinearLayout>
 
             </FrameLayout>
 
